# tsurust

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  CLIENT_SERVER.md  Cargo.toml  DEPLOYMENT.md  DEVELOPMENT_ROADMAP.md  GITHUB_PAGES_DEPLOYMENT.md  HANDOFF.md  LOBBY.md  PLAN.md  PRODUCTION_DEPLOYMENT_PROPOSAL.md  PRODUCTION_WORKFLOW.md  README.md  TESTING.md  TRAILS.md  check-network.ps1  client-egui_bin-4198450c50d4134d.js  client-egui_bin-4d6165d53c0c9156.js  client-egui_bin-4d6165d53c0c9156_bg.wasm  client-egui_bin-8419cf2bece6c7ac.js  docker-compose.yml  host-game.sh  index.html  setup-production-branch.ps1  setup-production-branch.sh  test-server-container.ps1  test-server-container.sh  test-server-local.ps1
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy-pages.yml
client/: Cargo.toml
client-egui/: Cargo.toml  Dockerfile  Trunk.toml  build_wasm.ps1  build_wasm.sh  docker-entrypoint.sh  nginx.conf
client-egui/docs/: index.html  sw.js
client-egui/src/: app.rs  backgr_render.rs  board_renderer.rs  file_io.rs  hand_renderer.rs  lib.rs  main.rs  main_native.rs  main_wasm.rs  messaging.rs  player_card.rs  rendering.rs  replay_state.rs  stats_display.rs  tile_button.rs  ws_client.rs
client-egui/src/components/: lobby_board.rs  mod.rs
client-egui/src/screens/: game.rs  game_over.rs  lobby.rs  lobby_forms.rs  main_menu.rs  mod.rs  replay_viewer.rs
client-egui/tests/: ui_e2e.rs  visual_dump.rs
client-egui/web/: README.md  client_egui.js  client_egui_bg.wasm  config.js  index.html
common/: Cargo.toml
common-client/: Cargo.toml
common-client/src/: main.rs
common/proptest-regressions/: lobby.txt
common/src/: board.rs  colors.rs  deck.rs  game.rs  lib.rs  lobby.rs  protocol.rs  protocol_tests.rs  trail.rs
common/tests/: lobby_integration.rs  lobby_launch_flow.rs
docs/: ALPHA_PLAYTEST.md  ALPHA_RELEASE.md  ALPHA_SETUP.md
proposals/: 001-integration-testing.md  002-cicd-pipeline.md  003-cicd-implementation.md  004-websocket-reconnection.md  005-chat-transports.md  005-code-review-findings.md
server/: Cargo.toml  Dockerfile
server/src/: handler.rs  integration_tests.rs  lib.rs  main.rs  protocol.rs  room.rs  room_tests.rs  server.rs  server_tests.rs
trial/: client-egui_bin-4d3af93091234cbd.js  client-egui_bin-840ca17bbdcb18a7.js  index.html
trial/snippets/client-egui-9edd77b714be94d8/: inline0.js
