[package]
name = "client-egui"
default-run = "client-egui_bin"
version = "0.1.0"
authors = ["Alejandro Alvarado"]
edition = "2021"
rust-version = "1.78"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# tsurust_common = { path = "../common" }

[[bin]]
name = "client-egui_bin"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tsurust_common = { path = "../common" }
egui = "0.26.2"
eframe = { version = "0.26.2", default-dependencies = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ewebsock = "0.6"
wasm-bindgen = "0.2"
chrono = { version = "0.4", features = ["serde"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"
rfd = "0.12"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3", features = [
    "Window", "Document", "Element", "Navigator", "Clipboard",
    "Blob", "BlobPropertyBag", "File", "FileList", "FileReader",
    "Url", "HtmlAnchorElement", "HtmlInputElement", "Event", "EventTarget"
] }
js-sys = "0.3"
web-time = "0.2"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }