[package]
name = "tsurust_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.1"
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
proptest = "1.0"